add tooltip with absolute positioning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head> 
 <body>
   <h1 id="label">World Happiness Report </h1>
-  <svg id="svg" width="1090" height="540"></svg>
+  <div id="svg"/>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="script.js"/>
 </body>
