--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head> 
 <body>
   <h1 id="label">World Happiness Report </h1>
-  <h3>Happiness Score based on GDP per Capita</h3>
+  <h3 id="title">Happiness Score based on GDP per Capita</h3>
   <div id="btn-group">
     <button id="gddpc">GDP per Capita</button>
     <button id="social_support">Social Support</button>
     <button id="life_expectancy">Healthy Life Expectancy</button>
   </div>
   <div id="svg"/>
+  <div id="svg2"/>
+  <div id="svg3"/>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="script.js"/>
 </body>
